# baka-Bot

./: .env.prod  README.md  bot.py  pyproject.toml
src/plugins/: ai_chat.py  img_saver.py  logger.py  poke_handler.py
