[project]
name = "baka"
version = "0.1.0"
description = "baka"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "nonebot2[fastapi]>=2.4.4",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-status>=0.9.0",
    "nonebot-plugin-sentry>=2.0.0",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-localstore>=0.7.4",
    "nonebot-plugin-alconna>=0.60.4",
    "nonebot-plugin-filehost>=1.1.1",
    "nonebot-plugin-orm>=0.8.3",
    "nonebot-plugin-htmlkit>=0.1.0rc5",
]

[tool.nonebot]
plugin_dirs = []
builtin_plugins = ["echo"]

[tool.nonebot.adapters]
nonebot-adapter-onebot = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
"@local" = []

[tool.nonebot.plugins]
"@local" = []
nonebot-plugin-status = ["nonebot_plugin_status"]
nonebot-plugin-sentry = ["nonebot_plugin_sentry"]
nonebot-plugin-apscheduler = ["nonebot_plugin_apscheduler"]
nonebot-plugin-localstore = ["nonebot_plugin_localstore"]
nonebot-plugin-alconna = ["nonebot_plugin_alconna"]
nonebot-plugin-filehost = ["nonebot_plugin_filehost"]
nonebot-plugin-orm = ["nonebot_plugin_orm"]
nonebot-plugin-htmlkit = ["nonebot_plugin_htmlkit"]
